<resources>
    <string name="app_name">Observatório Cidadão</string>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <!-- Change the following strings as required -->
    <string name="back4app_app_id">XsIozCVgAyFkHxYfAgfPHmqvsos52GVnzjohIvTO</string>
    <string name="back4app_client_key">CAJQNowXCQUiEIrZjKhvzzGAPl44EyUOLgo8YRwP</string>

    <string name="button_google">Entrar com o Gmail</string>
    <string name="button_sign_in">Entrar</string>
    <string name="button_facebook">Entrar com o Facebook</string>
    <string name="button_cadastrar">Cadastre-se</string>
    <string name="text_login">Login</string>
    <string name="text_password">Senha</string>
    <string name="text_title_pt1">Observatório Cidadão</string>
    <string name="text_title_pt2">de Enchentes</string>
    <string name="text_cabecalho_pt">Cadastre-se para compartilhar e visualizar informações sobre enchentes</string>

    <string name="text_share">Informar</string>
    <string name="text_home">Home</string>
    <string name="text_profile">Perfil</string>
    <string name="text_options">Opções</string>
    <string name="text_notification">Notificações</string>

    <string name="text_button_altura_ruas">Altura da enchente nas ruas</string>
    <string name="text_button_leito_rio">Altura da água no leito do rio</string>
    <string name="text_button_intensidade_chuva">Intensidade da Chuva</string>
    <string name="text_button_enviar_foto">Enviar Foto</string>

    <string name="text_button_altura_baixa">Baixa</string>
    <string name="text_button_altura_moderada">Moderada</string>
    <string name="text_button_altura_alta">Alta</string>
    <string name="text_button_altura_transbordando">Transbordando</string>

    <string name="text_button_altura_agua">Altura da água</string>
    <string name="text_button_altura_boneco">Altura da água pelo boneco</string>
    <string name="text_button_faixa_cores">Altura da água faixa de cores</string>

    <string name="text_button_faixa_verde">Verde</string>
    <string name="text_button_faixa_amarelo">Amarelo</string>
    <string name="text_button_faixa_vermelho">Vermelho</string>

    <string name="text_button_boneco_tornozelo">No tornozelo</string>
    <string name="text_button_boneco_joelho">No joelho</string>
    <string name="text_button_boneco_cintura">Na cintura</string>
    <string name="text_button_boneco_pescoco">No pescoço</string>
    <string name="text_button_boneco_cabecs">Acima da cabeça</string>

    <string name="text_button_altura_transitavel">Transitável</string>
    <string name="text_button_altura_intransitavel">Intransitável</string>

    <string name="text_button_chuva_forteCventos">Chuva forte com ventos</string>
    <string name="text_button_chuva_forteSventos">Chuva forte sem ventos</string>
    <string name="text_button_chuva_moderadaCventos">Chuva moderada com ventos</string>
    <string name="text_button_chuva_moderadaSventos">Chuva moderada sem ventos</string>
    <string name="text_button_chuva_fracaCventos">Chuva fraca com ventos</string>
    <string name="text_button_chuva_fracaSventos">Chuva fraca sem ventos</string>
    <string name="title_activity_initial_screen">InitialScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="google_maps_key">AIzaSyDZHWqWdLB0msG7lOw9LaZdDfrqvBPgSIc</string>

    <string name="hello_world">Hello world!</string>
    <string name="capture_button">Capture Image From Camera</string>
    <string name="desc">capture image place holder</string>

    <string name="hint_photo">Foto tirada</string>
    <string name="hint_text_photo">Escreva um comentário</string>

    <string name="text_name">Nome</string>
    <string name="text_password_again">Repita a senha</string>

    <string name="text_email">Email</string>

    <string name="text_save">Salvar</string>
    <string name="text_cancel">Cancelar</string>

    <string name="text_hint_google">Botão para entrar com uma conta google</string>
    <string name="text_hint_facebook">Botão para entrar com uma conta facebook</string>

    <string name="number_zero">0</string>
    <string name="text_feedback">Feedback</string>
    <string name="text_shared">Compartilhamento</string>

    <string name="edit_perfil">Editar</string>

    <string name="temp">Temp</string>
    <string name="vazio">   </string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_settings">Settings</string>

    <string name="telephone_edit">Telefone</string>
    <string name="city_edit">Cidade</string>
    <string name="account_symbol">Account</string>

    <string name="max_seekBar">30 KM</string>
    <string name="min_seekBar">0 KM</string>
    <string name="atual_seekBar"></string>
    <string name="interesse_seekBar">Raio de Interesse</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_edit_perfilt">Settings</string>
    <string name="title_activity_maps">Map</string>

    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Fechar</string>
</resources>
