<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite">

    <TextView
        android:id="@+id/text_vazio"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorIce"
        android:text="@string/vazio"
        app:layout_constraintTop_toBottomOf="@+id/simpleSeekBar"
        tools:layout_editor_absoluteX="0dp" />

    <SeekBar
        android:id="@+id/simpleSeekBar"
        android:layout_width="347dp"
        android:layout_height="27dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/minSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/min_seekBar"
        app:layout_constraintStart_toStartOf="@+id/simpleSeekBar"
        app:layout_constraintTop_toBottomOf="@+id/simpleSeekBar" />

    <TextView
        android:id="@+id/maxSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/max_seekBar"
        app:layout_constraintEnd_toEndOf="@+id/simpleSeekBar"
        app:layout_constraintTop_toBottomOf="@+id/simpleSeekBar" />

    <TextView
        android:id="@+id/atualSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/atual_seekBar"
        app:layout_constraintEnd_toEndOf="@+id/simpleSeekBar"
        app:layout_constraintStart_toStartOf="@+id/simpleSeekBar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/raioInteresse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/interesse_seekBar"
        app:layout_constraintStart_toStartOf="@+id/simpleSeekBar"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>