<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite">

    <TextView
        android:id="@+id/text_vazio"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorIce"
        android:text="@string/vazio"
        app:layout_constraintTop_toBottomOf="@+id/button_cancel_editProfile"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/button_cancel_editProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_cancel"
        app:layout_constraintEnd_toStartOf="@+id/button_save_editProfile"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_save_editProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>