<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_login_cinza"
    tools:context=".compartilhar.intensidade_chuva.IntensidadeActivity"
    tools:layout_editor_absoluteY="25dp">

    <include
        android:id="@+id/id"
        layout="@layout/top_title"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/button_chuva_forte_c_ventos"
        android:layout_width="178dp"
        android:layout_height="91dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/fundo_login"
        android:drawableLeft="@drawable/forte_c_ventos"
        android:onClick="forteComVentos"
        android:paddingLeft="15dp"
        android:text="@string/text_button_chuva_forteCventos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

    <Button
        android:id="@+id/button_chuva_forte_s_ventos"
        android:layout_width="177dp"
        android:layout_height="91dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/fundo_login"
        android:drawableLeft="@drawable/forte"
        android:onClick="forteSemVentos"
        android:paddingLeft="15dp"
        android:text="@string/text_button_chuva_forteSventos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

    <Button
        android:id="@+id/button_chuva_moderada_c_ventos"
        android:layout_width="178dp"
        android:layout_height="84dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/fundo_login"
        android:drawableLeft="@drawable/moderada_c_vento"
        android:onClick="moderadaComVentos"
        android:paddingLeft="10dp"
        android:text="@string/text_button_chuva_moderadaCventos"
        app:layout_constraintEnd_toEndOf="@+id/button_chuva_forte_c_ventos"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/button_chuva_forte_c_ventos"
        app:layout_constraintTop_toBottomOf="@+id/button_chuva_forte_c_ventos" />

    <Button
        android:id="@+id/button_chuva_moderada_s_ventos"
        android:layout_width="176dp"
        android:layout_height="85dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/fundo_login"
        android:drawableLeft="@drawable/moderada"
        android:onClick="moderadaSemVentos"
        android:paddingLeft="10dp"
        android:text="@string/text_button_chuva_moderadaSventos"
        app:layout_constraintEnd_toEndOf="@+id/button_chuva_forte_s_ventos"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_chuva_forte_s_ventos"
        app:layout_constraintTop_toBottomOf="@+id/button_chuva_forte_s_ventos" />

    <Button
        android:id="@+id/button_chuva_fraca_c_ventos"
        android:layout_width="177dp"
        android:layout_height="83dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="192dp"
        android:background="@drawable/fundo_login"
        android:drawableLeft="@drawable/fraca_c_ventos"
        android:onClick="fracaComVentos"
        android:paddingLeft="10dp"
        android:text="@string/text_button_chuva_fracaCventos"
        app:layout_constraintEnd_toEndOf="@+id/button_chuva_moderada_c_ventos"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/button_chuva_moderada_c_ventos"
        app:layout_constraintTop_toBottomOf="@+id/button_chuva_forte_c_ventos" />

    <Button
        android:id="@+id/button_chuva_fraca_s_ventos"
        android:layout_width="177dp"
        android:layout_height="83dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="192dp"
        android:background="@drawable/fundo_login"
        android:drawableLeft="@drawable/fraca"
        android:onClick="fracaSemVentos"
        android:paddingLeft="10dp"
        android:text="@string/text_button_chuva_fracaSventos"
        app:layout_constraintEnd_toEndOf="@+id/button_chuva_moderada_s_ventos"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_chuva_moderada_s_ventos"
        app:layout_constraintTop_toBottomOf="@+id/button_chuva_forte_s_ventos" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1047041" />

</android.support.constraint.ConstraintLayout>